fix serverapplication