@@ -20,7 +20,7 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 public class ServerApplication {
-    private static final ExecutorService clientExecutor = Executors.newVirtualThreadPerTaskExecutor();
+    private static final ExecutorService clientExecutor = Executors.newCachedThreadPool()
     private static final ExecutorService backgroundExecutor = Executors.newSingleThreadExecutor();
     private static final int port = Integer.parseInt(
             System.getenv().getOrDefault("PORT", "9999"));
